[gd_scene load_steps=17 format=3 uid="uid://cmkfmv8i8bk06"]

[ext_resource type="Script" path="res://Scenes/UI/prototype_book.gd" id="1_842uj"]
[ext_resource type="Script" path="res://Scenes/UI/craft_page_3d.gd" id="1_rbhua"]
[ext_resource type="Script" path="res://Scenes/UI/craft_table.gd" id="3_57m76"]
[ext_resource type="AudioStream" uid="uid://dgbrwssopwhl" path="res://Assets/SFX/UI/page_turn1.ogg" id="4_qh07j"]
[ext_resource type="AudioStream" uid="uid://m7gu1x3q6ya5" path="res://Assets/SFX/UI/page_turn2.ogg" id="5_8br65"]
[ext_resource type="AudioStream" uid="uid://xhn2advv8ybs" path="res://Assets/SFX/UI/page_turn3.ogg" id="6_y7i7e"]
[ext_resource type="AudioStream" uid="uid://drf4o4a2256vr" path="res://Assets/SFX/UI/page_turn4.ogg" id="7_gj701"]

[sub_resource type="BoxShape3D" id="BoxShape3D_15e0w"]
size = Vector3(2, 2, 2)

[sub_resource type="BoxShape3D" id="BoxShape3D_pgvpn"]
size = Vector3(1.7, 2, 1.1)

[sub_resource type="PlaneMesh" id="PlaneMesh_xmrvd"]
size = Vector2(0.8, 1)

[sub_resource type="BoxMesh" id="BoxMesh_1omcy"]
size = Vector3(0.8, 0.15, 1)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_totlh"]
points = PackedVector3Array(0.4, 0, 0.5, -0.4, 0, 0.5, 0.4, 0, -0.5, -0.4, 0, -0.5)

[sub_resource type="PlaneMesh" id="PlaneMesh_ahefp"]
size = Vector2(0.8, 1)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_mxj2s"]
points = PackedVector3Array(0.4, 0, 0.5, -0.4, 0, 0.5, 0.4, 0, -0.5, -0.4, 0, -0.5)

[sub_resource type="BoxMesh" id="BoxMesh_4gbp1"]
size = Vector3(0.1, 0.148, 1)

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_skntt"]
streams_count = 4
stream_0/stream = ExtResource("4_qh07j")
stream_1/stream = ExtResource("5_8br65")
stream_2/stream = ExtResource("6_y7i7e")
stream_3/stream = ExtResource("7_gj701")

[node name="Prototype_Book" type="Node3D"]
process_mode = 3
script = ExtResource("1_842uj")

[node name="Area3D" type="Area3D" parent="."]
collision_layer = 3
collision_mask = 3

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("BoxShape3D_15e0w")

[node name="StaticBody3D" type="StaticBody3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D"]
shape = SubResource("BoxShape3D_pgvpn")

[node name="LeftPage" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.394, 0, 0)
script = ExtResource("1_rbhua")

[node name="SubViewPort" type="SubViewport" parent="LeftPage"]
gui_embed_subwindows = true
size = Vector2i(346, 432)

[node name="Quad" type="MeshInstance3D" parent="LeftPage"]
transform = Transform3D(0.984808, 0.173648, 0, -0.173648, 0.984808, 0, 0, 0, 1, 0, 0, 0)
mesh = SubResource("PlaneMesh_xmrvd")
skeleton = NodePath("../..")

[node name="Depth" type="MeshInstance3D" parent="LeftPage/Quad"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.076, 0)
sorting_offset = -1.0
mesh = SubResource("BoxMesh_1omcy")
skeleton = NodePath("../../..")

[node name="Area3D" type="Area3D" parent="LeftPage/Quad"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="LeftPage/Quad/Area3D"]
transform = Transform3D(1, 1.49012e-08, 0, -1.49012e-08, 1, 0, 0, 0, 1, 0, 0, 0)
shape = SubResource("ConvexPolygonShape3D_totlh")

[node name="RightPage" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.394, 0, 0)
script = ExtResource("1_rbhua")

[node name="SubViewPort" type="SubViewport" parent="RightPage"]
gui_embed_subwindows = true
size = Vector2i(346, 432)

[node name="Quad" type="MeshInstance3D" parent="RightPage"]
transform = Transform3D(0.984808, -0.173648, 0, 0.173648, 0.984808, 0, 0, 0, 1, 0, 0, 0)
mesh = SubResource("PlaneMesh_ahefp")
skeleton = NodePath("../..")

[node name="Depth" type="MeshInstance3D" parent="RightPage/Quad"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.076, 0)
sorting_offset = -1.0
mesh = SubResource("BoxMesh_1omcy")
skeleton = NodePath("../../..")

[node name="Area3D" type="Area3D" parent="RightPage/Quad"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="RightPage/Quad/Area3D"]
transform = Transform3D(1, -1.49012e-08, 0, 1.49012e-08, 1, 0, 0, 0, 1, 0, 0, 0)
shape = SubResource("ConvexPolygonShape3D_mxj2s")

[node name="Depth" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.145, 0)
mesh = SubResource("BoxMesh_4gbp1")

[node name="CraftTable" type="Node" parent="."]
script = ExtResource("3_57m76")

[node name="PageTurn" type="AudioStreamPlayer" parent="CraftTable"]
stream = SubResource("AudioStreamRandomizer_skntt")
volume_db = -5.0
pitch_scale = 1.5
